--- a/package.json
+++ b/package.json
@@ -3,16 +3,49 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "24.0.13",
-    "@types/node": "12.0.7",
-    "@types/react": "16.8.19",
-    "@types/react-dom": "16.8.4",
+    "@graphile-contrib/pg-simplify-inflector": "^5.0.0-beta.1",
+    "apollo-server-express": "^2.6.2",
+    "apollo-upload-client": "^10.0.1",
+    "aws-sdk": "^2.470.0",
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "convict": "^5.0.0",
+    "cookie-parser": "^1.4.4",
+    "express": "^4.17.1",
+    "graphile-utils": "^4.4.0",
+    "graphql-binding": "^2.5.1",
+    "jsonwebtoken": "^8.5.1",
+    "postgraphile": "^4.4.0",
+    "postgraphile-plugin-upload-field": "^1.0.0-alpha.8",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
+    "typeorm": "^0.2.18",
+    "uuid": "^3.3.2",
+    "yup": "^0.27.0"
+  },
+  "devDependencies": {
+    "@types/apollo-upload-client": "^8.1.1",
+    "@types/compression": "0.0.36",
+    "@types/convict": "^4.2.1",
+    "@types/cookie": "^0.3.3",
+    "@types/cookie-parser": "^1.4.1",
+    "@types/jest": "24.0.13",
+    "@types/jsonwebtoken": "^8.3.2",
+    "@types/mime-types": "^2.1.0",
+    "@types/node": "12.0.7",
+    "@types/react": "16.8.19",
+    "@types/react-dom": "16.8.4",
+    "@types/uuid": "^3.4.4",
+    "@types/yup": "^0.26.13",
+    "cross-env": "^5.2.0",
+    "i": "^0.3.6",
+    "npm": "^6.9.0",
+    "ts-node": "^8.2.0",
     "typescript": "3.5.1"
   },
   "scripts": {
+    "server:dev": "cross-env DEBUG=\"postgraphile:graphql,postgraphile:request,postgraphile:postgres*\" NODE_ENV=development TS_NODE_PROJECT=tsconfig.server.json node -r ts-node/register --inspect server/index.ts",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
